--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             The program will analyze, categorize, and send you reminders.
         </p>
         <p>If you're interested, please join the waitlist by entering your email below:</p>
-        <form>
-            <input type="email" placeholder="Enter your email" required>
+        <form action="https://formspree.io/f/xrbznkgv" method="POST">
+            <input type="email" name="email" placeholder="Enter your email" required>
             <br>
             <button type="submit">Join Waitlist</button>
         </form>
