--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
             text-decoration: none;
             font-weight: bold;
         }
+        .plugin-block svg {
+            vertical-align: middle;
+            margin-right: 10px;
+            width: 30px;
+            height: 30px;
+        }
         .waitlist-container h2 {
             margin-bottom: 1rem;
             color: #4CAF50;
@@ -185,7 +191,7 @@
         <div class="two-column-layout">
             <!-- Plugin block -->
             <div class="plugin-block">
-                <h2>Try Our GPT Plugin</h2>
+                <h2><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-circle"><circle cx="12" cy="12" r="10"/><path d="M21 11.2A8.38 8.38 0 0 0 22 8a8 8 0 1 0-4 6.9"/></svg> Try Our GPT Plugin</h2>
                 <p>Experience the full functionality of our product with the GPT plugin. Get started today!</p>
                 <p><a href="https://chatgpt.com/g/g-XQpeI0D4h-sintes" target="_blank">Learn More About the GPT Plugin</a></p>
             </div>
